--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 
 <body>
   <!-- Mobile Header -->
-  <header class="mobile-header">
-    <div class="header-brand">
+  <header class="mobile-header" id="mobile-header">
+    <a href="#day-1" class="header-brand" id="header-brand">
       <span class="logo-text">G</span>
       <span class="header-title">GENUARY 2026</span>
-    </div>
+    </a>
     <button class="hamburger" id="hamburger" aria-label="Toggle menu">
       <span></span>
       <span></span>
